# task-manager

./: .coveragerc  .gitignore  Makefile  README.md  build.sh  create_superuser.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
bot/: run_bot.py
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py  views.py
task_manager/api/: __init__.py  urls.py
task_manager/apps/core/: apps.py
task_manager/apps/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/notifications/: __init__.py  admin.py  apps.py  consumers.py  context_processors.py  models.py  services.py  tasks.py  tests.py  tests_api.py  urls.py  views.py
task_manager/apps/notifications/api/: serializers.py  views.py
task_manager/apps/notifications/migrations/: 0001_initial.py
task_manager/apps/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tasks/: admin.py  apps.py  consumers.py  forms.py  models.py  signals.py  tests.py  tests_api.py  urls.py  views.py
task_manager/apps/tasks/api/: __init__.py  serializers.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0002_rename_date_created_task_created_at_and_more.py  0003_task_labels.py  (+1 more)
task_manager/apps/telegram/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
task_manager/apps/users/: forms.py  tests.py  urls.py  views.py
task_manager/templates/: 404.html  base.html  index.html
task_manager/templatetags/: custom_filters.py  title_extras.py
(+20 files in other folders)
