[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ruff>=0.11.8",
]
